--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "express": "^4.14.0",
     "express-jwt": "^5.0.0",
     "express-session": "^1.14.1",
+    "jsonwebtoken": "^7.1.9",
     "lodash": "^4.16.1",
     "mongodb": "^2.2.10",
     "mongoskin": "^2.1.0",
     "q": "^1.4.1",
+    "request": "^2.75.0",
     "rootpath": "^0.1.2"
   }
 }
